[gd_scene load_steps=9 format=3 uid="uid://dicvokuwuqkk3"]

[ext_resource type="Script" uid="uid://dqyfbarv35cmx" path="res://Boss/Boss.gd" id="1_sbnmg"]
[ext_resource type="Script" uid="uid://vhcfmbm21o3d" path="res://Boss/components/BossMovement.gd" id="2_sdoex"]
[ext_resource type="Script" uid="uid://crfiufq67eof7" path="res://Boss/components/BossShooting.gd" id="3_onhe5"]
[ext_resource type="PackedScene" uid="uid://dgxwxts1h0p4k" path="res://Boss/BossBullet.tscn" id="4_l78yc"]
[ext_resource type="Script" uid="uid://7qk54t66fmrl" path="res://Boss/components/BossHealth.gd" id="4_onhe5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbnmg"]
size = Vector2(64, 65)

[sub_resource type="Gradient" id="Gradient_sbnmg"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4xi7c"]
gradient = SubResource("Gradient_sbnmg")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 1)

[node name="Boss1" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_sbnmg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_sbnmg")
debug_color = Color(0.836953, 0.366634, 0.994606, 0.42)

[node name="Boss" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.499997, 0.499997)
texture = SubResource("GradientTexture2D_4xi7c")

[node name="Components" type="Node" parent="."]

[node name="BossMovementComponent" type="Node" parent="Components"]
script = ExtResource("2_sdoex")

[node name="BossShootingComponent" type="Node" parent="Components"]
script = ExtResource("3_onhe5")
projectile_scene = ExtResource("4_l78yc")

[node name="BossHealthComponent" type="Node" parent="Components"]
script = ExtResource("4_onhe5")

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2(50, 0)
